Use QWizard for stream out dialog
We should use the QWizard for stream out dialog instead of the semi-baked dialog we have right now. Patch followed.
We should use the QWizard for stream out dialog instead of the semi-baked dialog we have right now. Patch followed.
commit 3509a974 Author: Edward Wang edward.c.wang@compdigitec.com Date: Tue Dec 13 03:53:31 2011 +0100
Qt: use QWizard for Sout
Close [#5651](https://code.videolan.org/videolan/vlc/-/issues/5651)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: edward.c.wang@compdigitec.com
added Status::fixed label
closed
VideoLAN code repository instance