Qt: use QWizard for Sout

Close #5651

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>